# srefix-diagnosis

./: .gitignore  Dockerfile  ISSUES.md  LICENSE  NOTICE  PHASE2_AUDIT.md  PHASE3_AUDIT.md  README.md  glama.json
agents/: acm-agent.md  acr-agent.md  activemq-agent.md  aerospike-agent.md  airflow-agent.md  aks-agent.md  aks-ingress-gateway-agent.md  alertmanager-agent.md  alloydb-agent.md  api-management-agent.md  apisix-agent.md  apollo-agent.md  app-config-agent.md  application-insights-agent.md  arangodb-agent.md  argocd-agent.md  artifact-registry-agent.md  aurora-agent.md  auth0-agent.md  aws-alb-agent.md  aws-api-gateway-agent.md  aws-emr-agent.md  aws-iam-agent.md  aws-lambda-agent.md  aws-rds-agent.md  aws-s3-agent.md  aws-sqs-agent.md  aws-vpc-agent.md  azure-application-gateway-agent.md  azure-cache-redis-agent.md  azure-cosmosdb-agent.md  azure-dns-agent.md  azure-entra-id-agent.md  azure-front-door-agent.md  azure-functions-agent.md  azure-key-vault-agent.md  azure-monitor-agent.md  azure-postgres-agent.md  azure-service-bus-agent.md  azure-sql-agent.md  (+210 more)
demo/: README.md  _demo_driver.sh  _stream_pretty.py  benchmark_report.json  claude_config_demo.json  demo.cast  record_demo.sh  run_benchmark.py  scenarios.json
demo/mock-telemetry-mcp/: pyproject.toml
demo/mock-telemetry-mcp/mock_telemetry_mcp/: __init__.py  server.py
discovery-mcp/: pyproject.toml
discovery-mcp/srefix_discovery_mcp/: __init__.py  server.py
discovery-mcp/srefix_discovery_mcp/adapters/: __init__.py  _classify.py  aliyun.py  aws.py  aws_extended.py  azure.py  azure_extended.py  backstage.py  cassandra.py  consul.py  digitalocean.py  elasticsearch_direct.py  etcd.py  eureka.py  flyio.py  gcp.py  gcp_extended.py  helm_releases.py  heroku.py  huaweicloud.py  jdcloud.py  kubernetes.py  mongodb.py  monitoring_servers.py  nacos.py  nomad.py  opscloud4.py  railway.py  rancher.py  redis_cluster.py  saas.py  tencentcloud.py  vercel.py  virtual.py  volcengine.py  zookeeper.py
discovery-mcp/srefix_discovery_mcp/core/: __init__.py  cache.py  models.py  registry.py
es-mcp/: pyproject.toml
es-mcp/es_mcp/: __init__.py  client.py  server.py
explorer-mcp/: pyproject.toml
explorer-mcp/explorer_mcp/: __init__.py  bootstrap.py  categorizer.py  dependencies.py  planner.py  reflector.py  server.py  templates.py
fix_maps/: README.md  _example.yaml
jumphost-mcp/: pyproject.toml
jumphost-mcp/jumphost_mcp/: __init__.py  executor.py  inventory.py  safety.py  server.py
loki-mcp/: pyproject.toml
loki-mcp/loki_mcp/: __init__.py  client.py  server.py
mcp/: claude_mcp_config.json  filter_config.py  generate.py  pyproject.toml
mcp/srefix_diagnosis_mcp/: __init__.py  server.py
prometheus-mcp/: pyproject.toml
prometheus-mcp/prometheus_mcp/: __init__.py  client.py  server.py
scripts/: lint_agents.py
verify-mcp/: pyproject.toml
verify-mcp/verify_mcp/: __init__.py  cli.py  fix_cli.py  fixer.py  proposer.py  server.py  verifier.py
verify-mcp/verify_mcp/whitelists/: nginx.json  prometheus.json  vitess.json
