[project]
name = "srefix-es-mcp"
version = "0.1.0"
description = "MCP server exposing Elasticsearch / OpenSearch query API"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "requests>=2.31"]

[project.scripts]
srefix-es = "es_mcp.server:run"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
