[project]
name = "srefix-diagnosis-mcp"
version = "0.1.0"
description = "MCP servers exposing diagnostic knowledge for 250 technologies"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
"srefix-diag-acm" = "srefix_diagnosis_mcp:run_acm"
"srefix-diag-acr" = "srefix_diagnosis_mcp:run_acr"
"srefix-diag-activemq" = "srefix_diagnosis_mcp:run_activemq"
"srefix-diag-aerospike" = "srefix_diagnosis_mcp:run_aerospike"
"srefix-diag-airflow" = "srefix_diagnosis_mcp:run_airflow"
"srefix-diag-aks" = "srefix_diagnosis_mcp:run_aks"
"srefix-diag-aks-ingress-gateway" = "srefix_diagnosis_mcp:run_aks_ingress_gateway"
"srefix-diag-alertmanager" = "srefix_diagnosis_mcp:run_alertmanager"
"srefix-diag-alloydb" = "srefix_diagnosis_mcp:run_alloydb"
"srefix-diag-api-management" = "srefix_diagnosis_mcp:run_api_management"
"srefix-diag-apisix" = "srefix_diagnosis_mcp:run_apisix"
"srefix-diag-apollo" = "srefix_diagnosis_mcp:run_apollo"
"srefix-diag-app-config" = "srefix_diagnosis_mcp:run_app_config"
"srefix-diag-application-insights" = "srefix_diagnosis_mcp:run_application_insights"
"srefix-diag-arangodb" = "srefix_diagnosis_mcp:run_arangodb"
"srefix-diag-argocd" = "srefix_diagnosis_mcp:run_argocd"
"srefix-diag-artifact-registry" = "srefix_diagnosis_mcp:run_artifact_registry"
"srefix-diag-aurora" = "srefix_diagnosis_mcp:run_aurora"
"srefix-diag-auth0" = "srefix_diagnosis_mcp:run_auth0"
"srefix-diag-aws-alb" = "srefix_diagnosis_mcp:run_aws_alb"
"srefix-diag-aws-api-gateway" = "srefix_diagnosis_mcp:run_aws_api_gateway"
"srefix-diag-aws-emr" = "srefix_diagnosis_mcp:run_aws_emr"
"srefix-diag-aws-iam" = "srefix_diagnosis_mcp:run_aws_iam"
"srefix-diag-aws-lambda" = "srefix_diagnosis_mcp:run_aws_lambda"
"srefix-diag-aws-rds" = "srefix_diagnosis_mcp:run_aws_rds"
"srefix-diag-aws-s3" = "srefix_diagnosis_mcp:run_aws_s3"
"srefix-diag-aws-sqs" = "srefix_diagnosis_mcp:run_aws_sqs"
"srefix-diag-aws-vpc" = "srefix_diagnosis_mcp:run_aws_vpc"
"srefix-diag-azure-application-gateway" = "srefix_diagnosis_mcp:run_azure_application_gateway"
"srefix-diag-azure-cache-redis" = "srefix_diagnosis_mcp:run_azure_cache_redis"
"srefix-diag-azure-cosmosdb" = "srefix_diagnosis_mcp:run_azure_cosmosdb"
"srefix-diag-azure-dns" = "srefix_diagnosis_mcp:run_azure_dns"
"srefix-diag-azure-entra-id" = "srefix_diagnosis_mcp:run_azure_entra_id"
"srefix-diag-azure-front-door" = "srefix_diagnosis_mcp:run_azure_front_door"
"srefix-diag-azure-functions" = "srefix_diagnosis_mcp:run_azure_functions"
"srefix-diag-azure-key-vault" = "srefix_diagnosis_mcp:run_azure_key_vault"
"srefix-diag-azure-monitor" = "srefix_diagnosis_mcp:run_azure_monitor"
"srefix-diag-azure-postgres" = "srefix_diagnosis_mcp:run_azure_postgres"
"srefix-diag-azure-service-bus" = "srefix_diagnosis_mcp:run_azure_service_bus"
"srefix-diag-azure-sql" = "srefix_diagnosis_mcp:run_azure_sql"
"srefix-diag-azure-vm" = "srefix_diagnosis_mcp:run_azure_vm"
"srefix-diag-azure-vnet" = "srefix_diagnosis_mcp:run_azure_vnet"
"srefix-diag-bigquery" = "srefix_diagnosis_mcp:run_bigquery"
"srefix-diag-bind" = "srefix_diagnosis_mcp:run_bind"
"srefix-diag-blob-storage" = "srefix_diagnosis_mcp:run_blob_storage"
"srefix-diag-caddy" = "srefix_diagnosis_mcp:run_caddy"
"srefix-diag-calico" = "srefix_diagnosis_mcp:run_calico"
"srefix-diag-capacity-planner" = "srefix_diagnosis_mcp:run_capacity_planner"
"srefix-diag-cassandra" = "srefix_diagnosis_mcp:run_cassandra"
"srefix-diag-ceph" = "srefix_diagnosis_mcp:run_ceph"
"srefix-diag-cert-manager" = "srefix_diagnosis_mcp:run_cert_manager"
"srefix-diag-change-risk" = "srefix_diagnosis_mcp:run_change_risk"
"srefix-diag-chaos-engineer" = "srefix_diagnosis_mcp:run_chaos_engineer"
"srefix-diag-chromadb" = "srefix_diagnosis_mcp:run_chromadb"
"srefix-diag-cilium" = "srefix_diagnosis_mcp:run_cilium"
"srefix-diag-circleci" = "srefix_diagnosis_mcp:run_circleci"
"srefix-diag-clickhouse" = "srefix_diagnosis_mcp:run_clickhouse"
"srefix-diag-cloud-armor" = "srefix_diagnosis_mcp:run_cloud_armor"
"srefix-diag-cloud-build" = "srefix_diagnosis_mcp:run_cloud_build"
"srefix-diag-cloud-dns" = "srefix_diagnosis_mcp:run_cloud_dns"
"srefix-diag-cloud-functions" = "srefix_diagnosis_mcp:run_cloud_functions"
"srefix-diag-cloud-nat" = "srefix_diagnosis_mcp:run_cloud_nat"
"srefix-diag-cloud-router" = "srefix_diagnosis_mcp:run_cloud_router"
"srefix-diag-cloud-run" = "srefix_diagnosis_mcp:run_cloud_run"
"srefix-diag-cloud-scheduler" = "srefix_diagnosis_mcp:run_cloud_scheduler"
"srefix-diag-cloud-spanner" = "srefix_diagnosis_mcp:run_cloud_spanner"
"srefix-diag-cloud-sql" = "srefix_diagnosis_mcp:run_cloud_sql"
"srefix-diag-cloud-tasks" = "srefix_diagnosis_mcp:run_cloud_tasks"
"srefix-diag-cloudflare" = "srefix_diagnosis_mcp:run_cloudflare"
"srefix-diag-cloudfront" = "srefix_diagnosis_mcp:run_cloudfront"
"srefix-diag-cloudmap" = "srefix_diagnosis_mcp:run_cloudmap"
"srefix-diag-cloudtrail" = "srefix_diagnosis_mcp:run_cloudtrail"
"srefix-diag-cloudwatch" = "srefix_diagnosis_mcp:run_cloudwatch"
"srefix-diag-cloudwatch-logs" = "srefix_diagnosis_mcp:run_cloudwatch_logs"
"srefix-diag-cockroachdb" = "srefix_diagnosis_mcp:run_cockroachdb"
"srefix-diag-comms" = "srefix_diagnosis_mcp:run_comms"
"srefix-diag-consul" = "srefix_diagnosis_mcp:run_consul"
"srefix-diag-containerd" = "srefix_diagnosis_mcp:run_containerd"
"srefix-diag-coredns" = "srefix_diagnosis_mcp:run_coredns"
"srefix-diag-couchbase" = "srefix_diagnosis_mcp:run_couchbase"
"srefix-diag-couchdb" = "srefix_diagnosis_mcp:run_couchdb"
"srefix-diag-databricks" = "srefix_diagnosis_mcp:run_databricks"
"srefix-diag-datadog" = "srefix_diagnosis_mcp:run_datadog"
"srefix-diag-datadog-logs" = "srefix_diagnosis_mcp:run_datadog_logs"
"srefix-diag-dbt" = "srefix_diagnosis_mcp:run_dbt"
"srefix-diag-deployment-engineer" = "srefix_diagnosis_mcp:run_deployment_engineer"
"srefix-diag-dgraph" = "srefix_diagnosis_mcp:run_dgraph"
"srefix-diag-diagnosis" = "srefix_diagnosis_mcp:run_diagnosis"
"srefix-diag-docker" = "srefix_diagnosis_mcp:run_docker"
"srefix-diag-docker-compose" = "srefix_diagnosis_mcp:run_docker_compose"
"srefix-diag-drone" = "srefix_diagnosis_mcp:run_drone"
"srefix-diag-druid" = "srefix_diagnosis_mcp:run_druid"
"srefix-diag-dynamodb" = "srefix_diagnosis_mcp:run_dynamodb"
"srefix-diag-ec2" = "srefix_diagnosis_mcp:run_ec2"
"srefix-diag-ecr" = "srefix_diagnosis_mcp:run_ecr"
"srefix-diag-ecs" = "srefix_diagnosis_mcp:run_ecs"
"srefix-diag-efs" = "srefix_diagnosis_mcp:run_efs"
"srefix-diag-eks" = "srefix_diagnosis_mcp:run_eks"
"srefix-diag-elasticache" = "srefix_diagnosis_mcp:run_elasticache"
"srefix-diag-envoy" = "srefix_diagnosis_mcp:run_envoy"
"srefix-diag-es" = "srefix_diagnosis_mcp:run_es"
"srefix-diag-etcd" = "srefix_diagnosis_mcp:run_etcd"
"srefix-diag-event-hubs" = "srefix_diagnosis_mcp:run_event_hubs"
"srefix-diag-eventbridge" = "srefix_diagnosis_mcp:run_eventbridge"
"srefix-diag-external-secrets" = "srefix_diagnosis_mcp:run_external_secrets"
"srefix-diag-externaldns" = "srefix_diagnosis_mcp:run_externaldns"
"srefix-diag-falco" = "srefix_diagnosis_mcp:run_falco"
"srefix-diag-filebeat" = "srefix_diagnosis_mcp:run_filebeat"
"srefix-diag-filestore" = "srefix_diagnosis_mcp:run_filestore"
"srefix-diag-firestore" = "srefix_diagnosis_mcp:run_firestore"
"srefix-diag-flannel" = "srefix_diagnosis_mcp:run_flannel"
"srefix-diag-flink" = "srefix_diagnosis_mcp:run_flink"
"srefix-diag-fluentd" = "srefix_diagnosis_mcp:run_fluentd"
"srefix-diag-flux" = "srefix_diagnosis_mcp:run_flux"
"srefix-diag-fly" = "srefix_diagnosis_mcp:run_fly"
"srefix-diag-foundationdb" = "srefix_diagnosis_mcp:run_foundationdb"
"srefix-diag-gce" = "srefix_diagnosis_mcp:run_gce"
"srefix-diag-gcp-iam" = "srefix_diagnosis_mcp:run_gcp_iam"
"srefix-diag-gcp-secret-manager" = "srefix_diagnosis_mcp:run_gcp_secret_manager"
"srefix-diag-gcs" = "srefix_diagnosis_mcp:run_gcs"
"srefix-diag-github-actions" = "srefix_diagnosis_mcp:run_github_actions"
"srefix-diag-gitlab-ci" = "srefix_diagnosis_mcp:run_gitlab_ci"
"srefix-diag-gke" = "srefix_diagnosis_mcp:run_gke"
"srefix-diag-glusterfs" = "srefix_diagnosis_mcp:run_glusterfs"
"srefix-diag-google-cloud-load-balancer" = "srefix_diagnosis_mcp:run_google_cloud_load_balancer"
"srefix-diag-grafana" = "srefix_diagnosis_mcp:run_grafana"
"srefix-diag-graylog" = "srefix_diagnosis_mcp:run_graylog"
"srefix-diag-hadoop" = "srefix_diagnosis_mcp:run_hadoop"
"srefix-diag-haproxy" = "srefix_diagnosis_mcp:run_haproxy"
"srefix-diag-harness" = "srefix_diagnosis_mcp:run_harness"
"srefix-diag-hbase" = "srefix_diagnosis_mcp:run_hbase"
"srefix-diag-hdfs" = "srefix_diagnosis_mcp:run_hdfs"
"srefix-diag-helm" = "srefix_diagnosis_mcp:run_helm"
"srefix-diag-hive" = "srefix_diagnosis_mcp:run_hive"
"srefix-diag-influxdb" = "srefix_diagnosis_mcp:run_influxdb"
"srefix-diag-ingress-nginx" = "srefix_diagnosis_mcp:run_ingress_nginx"
"srefix-diag-istio" = "srefix_diagnosis_mcp:run_istio"
"srefix-diag-jaeger" = "srefix_diagnosis_mcp:run_jaeger"
"srefix-diag-janusgraph" = "srefix_diagnosis_mcp:run_janusgraph"
"srefix-diag-jenkins" = "srefix_diagnosis_mcp:run_jenkins"
"srefix-diag-k8s" = "srefix_diagnosis_mcp:run_k8s"
"srefix-diag-kafka" = "srefix_diagnosis_mcp:run_kafka"
"srefix-diag-keycloak" = "srefix_diagnosis_mcp:run_keycloak"
"srefix-diag-kinesis" = "srefix_diagnosis_mcp:run_kinesis"
"srefix-diag-knative" = "srefix_diagnosis_mcp:run_knative"
"srefix-diag-kong" = "srefix_diagnosis_mcp:run_kong"
"srefix-diag-linkerd" = "srefix_diagnosis_mcp:run_linkerd"
"srefix-diag-logic-apps" = "srefix_diagnosis_mcp:run_logic_apps"
"srefix-diag-logstash" = "srefix_diagnosis_mcp:run_logstash"
"srefix-diag-loki" = "srefix_diagnosis_mcp:run_loki"
"srefix-diag-longhorn" = "srefix_diagnosis_mcp:run_longhorn"
"srefix-diag-mariadb" = "srefix_diagnosis_mcp:run_mariadb"
"srefix-diag-meilisearch" = "srefix_diagnosis_mcp:run_meilisearch"
"srefix-diag-memcached" = "srefix_diagnosis_mcp:run_memcached"
"srefix-diag-memorystore" = "srefix_diagnosis_mcp:run_memorystore"
"srefix-diag-metallb" = "srefix_diagnosis_mcp:run_metallb"
"srefix-diag-milvus" = "srefix_diagnosis_mcp:run_milvus"
"srefix-diag-mimir" = "srefix_diagnosis_mcp:run_mimir"
"srefix-diag-minio" = "srefix_diagnosis_mcp:run_minio"
"srefix-diag-mongo" = "srefix_diagnosis_mcp:run_mongo"
"srefix-diag-msk" = "srefix_diagnosis_mcp:run_msk"
"srefix-diag-mysql" = "srefix_diagnosis_mcp:run_mysql"
"srefix-diag-nacos" = "srefix_diagnosis_mcp:run_nacos"
"srefix-diag-nagios" = "srefix_diagnosis_mcp:run_nagios"
"srefix-diag-nats" = "srefix_diagnosis_mcp:run_nats"
"srefix-diag-neo4j" = "srefix_diagnosis_mcp:run_neo4j"
"srefix-diag-neptune" = "srefix_diagnosis_mcp:run_neptune"
"srefix-diag-netlify" = "srefix_diagnosis_mcp:run_netlify"
"srefix-diag-newrelic" = "srefix_diagnosis_mcp:run_newrelic"
"srefix-diag-nfs" = "srefix_diagnosis_mcp:run_nfs"
"srefix-diag-nginx" = "srefix_diagnosis_mcp:run_nginx"
"srefix-diag-nlb" = "srefix_diagnosis_mcp:run_nlb"
"srefix-diag-nomad" = "srefix_diagnosis_mcp:run_nomad"
"srefix-diag-oauth2-proxy" = "srefix_diagnosis_mcp:run_oauth2_proxy"
"srefix-diag-observability" = "srefix_diagnosis_mcp:run_observability"
"srefix-diag-okta" = "srefix_diagnosis_mcp:run_okta"
"srefix-diag-opa" = "srefix_diagnosis_mcp:run_opa"
"srefix-diag-openfaas" = "srefix_diagnosis_mcp:run_openfaas"
"srefix-diag-opensearch" = "srefix_diagnosis_mcp:run_opensearch"
"srefix-diag-openshift" = "srefix_diagnosis_mcp:run_openshift"
"srefix-diag-opsgenie" = "srefix_diagnosis_mcp:run_opsgenie"
"srefix-diag-oracle" = "srefix_diagnosis_mcp:run_oracle"
"srefix-diag-otel-collector" = "srefix_diagnosis_mcp:run_otel_collector"
"srefix-diag-pagerduty" = "srefix_diagnosis_mcp:run_pagerduty"
"srefix-diag-pg" = "srefix_diagnosis_mcp:run_pg"
"srefix-diag-pgvector" = "srefix_diagnosis_mcp:run_pgvector"
"srefix-diag-pinecone" = "srefix_diagnosis_mcp:run_pinecone"
"srefix-diag-planetscale" = "srefix_diagnosis_mcp:run_planetscale"
"srefix-diag-platform-engineer" = "srefix_diagnosis_mcp:run_platform_engineer"
"srefix-diag-podman" = "srefix_diagnosis_mcp:run_podman"
"srefix-diag-postgres" = "srefix_diagnosis_mcp:run_postgres"
"srefix-diag-postmortem" = "srefix_diagnosis_mcp:run_postmortem"
"srefix-diag-powerdns" = "srefix_diagnosis_mcp:run_powerdns"
"srefix-diag-prometheus" = "srefix_diagnosis_mcp:run_prometheus"
"srefix-diag-pubsub" = "srefix_diagnosis_mcp:run_pubsub"
"srefix-diag-pulsar" = "srefix_diagnosis_mcp:run_pulsar"
"srefix-diag-pyroscope" = "srefix_diagnosis_mcp:run_pyroscope"
"srefix-diag-qdrant" = "srefix_diagnosis_mcp:run_qdrant"
"srefix-diag-questdb" = "srefix_diagnosis_mcp:run_questdb"
"srefix-diag-rabbitmq" = "srefix_diagnosis_mcp:run_rabbitmq"
"srefix-diag-rancher" = "srefix_diagnosis_mcp:run_rancher"
"srefix-diag-redis" = "srefix_diagnosis_mcp:run_redis"
"srefix-diag-redpanda" = "srefix_diagnosis_mcp:run_redpanda"
"srefix-diag-redshift" = "srefix_diagnosis_mcp:run_redshift"
"srefix-diag-rocketmq" = "srefix_diagnosis_mcp:run_rocketmq"
"srefix-diag-rook" = "srefix_diagnosis_mcp:run_rook"
"srefix-diag-route53" = "srefix_diagnosis_mcp:run_route53"
"srefix-diag-scylladb" = "srefix_diagnosis_mcp:run_scylladb"
"srefix-diag-secops" = "srefix_diagnosis_mcp:run_secops"
"srefix-diag-secrets-manager" = "srefix_diagnosis_mcp:run_secrets_manager"
"srefix-diag-sentinel" = "srefix_diagnosis_mcp:run_sentinel"
"srefix-diag-sentry" = "srefix_diagnosis_mcp:run_sentry"
"srefix-diag-ses" = "srefix_diagnosis_mcp:run_ses"
"srefix-diag-slo-guardian" = "srefix_diagnosis_mcp:run_slo_guardian"
"srefix-diag-snowflake" = "srefix_diagnosis_mcp:run_snowflake"
"srefix-diag-sns" = "srefix_diagnosis_mcp:run_sns"
"srefix-diag-solr" = "srefix_diagnosis_mcp:run_solr"
"srefix-diag-spark" = "srefix_diagnosis_mcp:run_spark"
"srefix-diag-spinnaker" = "srefix_diagnosis_mcp:run_spinnaker"
"srefix-diag-splunk" = "srefix_diagnosis_mcp:run_splunk"
"srefix-diag-spring-cloud-config" = "srefix_diagnosis_mcp:run_spring_cloud_config"
"srefix-diag-sqlserver" = "srefix_diagnosis_mcp:run_sqlserver"
"srefix-diag-ssm" = "srefix_diagnosis_mcp:run_ssm"
"srefix-diag-step-functions" = "srefix_diagnosis_mcp:run_step_functions"
"srefix-diag-supabase" = "srefix_diagnosis_mcp:run_supabase"
"srefix-diag-tdengine" = "srefix_diagnosis_mcp:run_tdengine"
"srefix-diag-tekton" = "srefix_diagnosis_mcp:run_tekton"
"srefix-diag-teleport" = "srefix_diagnosis_mcp:run_teleport"
"srefix-diag-tempo" = "srefix_diagnosis_mcp:run_tempo"
"srefix-diag-terraform" = "srefix_diagnosis_mcp:run_terraform"
"srefix-diag-thanos" = "srefix_diagnosis_mcp:run_thanos"
"srefix-diag-tidb" = "srefix_diagnosis_mcp:run_tidb"
"srefix-diag-timescaledb" = "srefix_diagnosis_mcp:run_timescaledb"
"srefix-diag-toil-buster" = "srefix_diagnosis_mcp:run_toil_buster"
"srefix-diag-traefik" = "srefix_diagnosis_mcp:run_traefik"
"srefix-diag-traffic-manager" = "srefix_diagnosis_mcp:run_traffic_manager"
"srefix-diag-triage" = "srefix_diagnosis_mcp:run_triage"
"srefix-diag-trino" = "srefix_diagnosis_mcp:run_trino"
"srefix-diag-trivy" = "srefix_diagnosis_mcp:run_trivy"
"srefix-diag-typesense" = "srefix_diagnosis_mcp:run_typesense"
"srefix-diag-vault" = "srefix_diagnosis_mcp:run_vault"
"srefix-diag-vector" = "srefix_diagnosis_mcp:run_vector"
"srefix-diag-vercel" = "srefix_diagnosis_mcp:run_vercel"
"srefix-diag-victoriametrics" = "srefix_diagnosis_mcp:run_victoriametrics"
"srefix-diag-vitess" = "srefix_diagnosis_mcp:run_vitess"
"srefix-diag-vpc" = "srefix_diagnosis_mcp:run_vpc"
"srefix-diag-weaviate" = "srefix_diagnosis_mcp:run_weaviate"
"srefix-diag-zabbix" = "srefix_diagnosis_mcp:run_zabbix"
"srefix-diag-zipkin" = "srefix_diagnosis_mcp:run_zipkin"
"srefix-diag-zookeeper" = "srefix_diagnosis_mcp:run_zookeeper"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
srefix_diagnosis_mcp = ["agents/*.md"]
